Upgrade ASM library from 7.1 to 9.7 (#2)
* upgrade(dependencies): Update ASM library from 7.1 to 9.7

This commit upgrades the ASM bytecode manipulation library from version 7.1 to 9.7,
bringing improved Java bytecode support and bug fixes. The upgrade required updating
all ASM-related code across the codebase to ensure compatibility with the new API.

Changes made:
- Updated ASM library JARs (asm, asm-analysis, asm-commons, asm-tree, asm-util)
- Modified bytecode generation code in codegen package
- Updated dynamic linking support in dynalink package
- Adjusted IR (Intermediate Representation) nodes for compatibility
- Updated saigen code generator tools
- Modified runtime components (linker, loader, etc.)
- Updated test cases to work with new ASM version
- Updated Maven and Ant build configurations

The upgrade maintains backward compatibility with existing functionality while
providing access to newer bytecode features and improved performance.

* Update GitHub Actions to JDK 21 and fix handle interface flag logic in MethodEmitter